# backend

./: .gitignore  Dockerfile  README.md  compose.prod.sh  compose.test.sh  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.test.yaml  pyproject.toml  trusted_roots.json  ts-healthcheck.sh
docs/: api-reference.md  cloudflare.md  configuration.md  deployment.md  development.md  tailscale.md
secrets/: README.md
src/: __init__.py  config.py  main.py
src/core/: basic_configuration.py  bootstrap_utils.py  cassandra_config.py  cassandra_configuration.py  cassandra_service.py  config.py  database_repositories.py  env_config.py  env_configuration.py  environment.py  identity_configuration.py  location_utils.py  logger_config.py  logger_configuration.py  mock_database_repositories.py  network_utils.py  tailscale.py  tailscale_service.py
src/fast_api/: application_context.py  dependencies.py  exception_handler.py  fastapi_factory.py  fastapi_settings.py  router.py
src/fast_api/api/v1/endpoints/: health.py  locations.py  readings.py  sensors.py
src/fast_api/exceptions/: base_exception.py  conversion_exceptions.py  database_exceptions.py
src/fast_api/services/: identity.py  identity_service.py  info.py  location_service.py  readings.py  readings_service.py  sensors_service.py
src/node_mode/: fastapi_factory.py  fastapi_settings.py
src/node_mode/coordination/: router.py
src/node_mode/data_backend/: router.py
src/node_mode/shared/: dependencies.py  router.py
src/node_mode/shared/services/: operating_mode.py
tests/: mock_database_repositories.py
tests/mocks/: mock_database_repositories.py
