[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "TdewT",email = "szwej.jakub@gmail.com"}
]
readme = "README.md"
requires-python = "3.14"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "contracts @ git+https://github.com/ZPI-KKM-WSIZ/contracts@master",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "colorlog (>=6.10.1,<7.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
